samples/_failures_safe/1761222968_1527d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36abb81d.c: In function ‘main’:
./samples/SAFE/__tmp_36abb81d.c:147:9: error: ‘EVENT’ undeclared (first use in this function)
  147 |         EVENT
      |         ^~~~~
./samples/SAFE/__tmp_36abb81d.c:147:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_36abb81d.c:148: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_36abb81d.c:146:27: note: to match this ‘{’
  146 |     enum Event events[] = {
      |                           ^
./samples/SAFE/__tmp_36abb81d.c:147:9: error: expected declaration or statement at end of input
  147 |         EVENT
      |         ^~~~~
